--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Main</title>
+  <link rel="stylesheet" type="text/css" href="style.css" media="screen" />
 </head>
 
 <body>
@@ -5763,6 +5764,20 @@ var visotype$elm_dom$Dom$addAction = function (_n0) {
 				});
 		});
 };
+var visotype$elm_dom$Dom$addClass = function (s) {
+	return visotype$elm_dom$Dom$Internal$modify(
+		function (n) {
+			return _Utils_update(
+				n,
+				{
+					classes: A2(
+						elm$core$List$append,
+						n.classes,
+						_List_fromArray(
+							[s]))
+				});
+		});
+};
 var elm$core$Tuple$pair = F2(
 	function (a, b) {
 		return _Utils_Tuple2(a, b);
@@ -6000,7 +6015,10 @@ var author$project$Main$taskFilterElements = A2(
 				'Incomplete Tasks',
 				visotype$elm_dom$Dom$element('button')))
 		]),
-	visotype$elm_dom$Dom$element('div'));
+	A2(
+		visotype$elm_dom$Dom$addClass,
+		'filter',
+		visotype$elm_dom$Dom$element('div')));
 var author$project$Main$DeleteTask = function (a) {
 	return {$: 'DeleteTask', a: a};
 };
@@ -6045,20 +6063,6 @@ var visotype$elm_dom$Dom$addAttributeList = function (la) {
 				n,
 				{
 					attributes: A2(elm$core$List$append, n.attributes, la)
-				});
-		});
-};
-var visotype$elm_dom$Dom$addClass = function (s) {
-	return visotype$elm_dom$Dom$Internal$modify(
-		function (n) {
-			return _Utils_update(
-				n,
-				{
-					classes: A2(
-						elm$core$List$append,
-						n.classes,
-						_List_fromArray(
-							[s]))
 				});
 		});
 };
@@ -6125,7 +6129,7 @@ var author$project$Main$taskDescriptionElement = function (task) {
 					val,
 					A2(
 						visotype$elm_dom$Dom$addClass,
-						'description',
+						'description-container',
 						visotype$elm_dom$Dom$element('div'))));
 		} else {
 			var bufferVal = _n0.b;
@@ -6153,20 +6157,29 @@ var author$project$Main$taskDescriptionElement = function (task) {
 							'click',
 							author$project$Main$EditDescription(task)),
 						A2(
-							visotype$elm_dom$Dom$appendText,
-							'Save',
-							visotype$elm_dom$Dom$element('button'))),
+							visotype$elm_dom$Dom$addClass,
+							'save',
+							A2(
+								visotype$elm_dom$Dom$appendText,
+								'Save',
+								visotype$elm_dom$Dom$element('button')))),
 						A2(
 						visotype$elm_dom$Dom$addAction,
 						_Utils_Tuple2(
 							'click',
 							author$project$Main$CancelEditDescription(task)),
 						A2(
-							visotype$elm_dom$Dom$appendText,
-							'Cancel',
-							visotype$elm_dom$Dom$element('button')))
+							visotype$elm_dom$Dom$addClass,
+							'cancel',
+							A2(
+								visotype$elm_dom$Dom$appendText,
+								'Cancel',
+								visotype$elm_dom$Dom$element('button'))))
 					]),
-				visotype$elm_dom$Dom$element('div'));
+				A2(
+					visotype$elm_dom$Dom$addClass,
+					'description',
+					visotype$elm_dom$Dom$element('div')));
 		}
 	} else {
 		return visotype$elm_dom$Dom$element('div');
@@ -6219,17 +6232,23 @@ var author$project$Main$taskToggleCompleteButton = function (task) {
 			'click',
 			author$project$Main$UndoTaskCompletion(task)),
 		A2(
-			visotype$elm_dom$Dom$appendText,
-			'Undo',
-			visotype$elm_dom$Dom$element('button'))) : A2(
+			visotype$elm_dom$Dom$addClass,
+			'undo',
+			A2(
+				visotype$elm_dom$Dom$appendText,
+				'Undo',
+				visotype$elm_dom$Dom$element('button')))) : A2(
 		visotype$elm_dom$Dom$addAction,
 		_Utils_Tuple2(
 			'click',
 			author$project$Main$CompleteTask(task)),
 		A2(
-			visotype$elm_dom$Dom$appendText,
-			'Complete',
-			visotype$elm_dom$Dom$element('button')));
+			visotype$elm_dom$Dom$addClass,
+			'complete',
+			A2(
+				visotype$elm_dom$Dom$appendText,
+				'Complete',
+				visotype$elm_dom$Dom$element('button'))));
 };
 var author$project$Main$taskListElement = function (task) {
 	return A2(
@@ -6244,9 +6263,9 @@ var author$project$Main$taskListElement = function (task) {
 					'click',
 					author$project$Main$DeleteTask(task)),
 				A2(
-					visotype$elm_dom$Dom$appendText,
-					'Delete',
-					visotype$elm_dom$Dom$element('button'))),
+					visotype$elm_dom$Dom$addClass,
+					'delete',
+					visotype$elm_dom$Dom$element('span'))),
 				author$project$Main$taskDescriptionElement(task)
 			]),
 		visotype$elm_dom$Dom$element('li'));
@@ -6259,6 +6278,7 @@ var author$project$Main$view = function (model) {
 			visotype$elm_dom$Dom$appendChildList,
 			_List_fromArray(
 				[
+					author$project$Main$taskFilterElements,
 					A2(
 					visotype$elm_dom$Dom$appendChildList,
 					_List_fromArray(
@@ -6273,17 +6293,22 @@ var author$project$Main$view = function (model) {
 										elm$html$Html$Attributes$value(model.inputTaskName),
 										elm$html$Html$Attributes$placeholder('What needs to be done?')
 									]),
-								visotype$elm_dom$Dom$element('input'))),
+								A2(
+									visotype$elm_dom$Dom$addClass,
+									'addtask',
+									visotype$elm_dom$Dom$element('input')))),
 							A2(
 							visotype$elm_dom$Dom$addAction,
 							_Utils_Tuple2('click', author$project$Main$AddTask),
 							A2(
 								visotype$elm_dom$Dom$appendText,
 								'Add Task',
-								visotype$elm_dom$Dom$element('button')))
+								A2(
+									visotype$elm_dom$Dom$addClass,
+									'addtask',
+									visotype$elm_dom$Dom$element('button'))))
 						]),
 					visotype$elm_dom$Dom$element('div')),
-					author$project$Main$taskFilterElements,
 					A2(
 					visotype$elm_dom$Dom$appendChildList,
 					A2(
@@ -6292,7 +6317,10 @@ var author$project$Main$view = function (model) {
 						A2(author$project$Main$filteredTaskListElements, model.visibleTasks, model.tasks)),
 					visotype$elm_dom$Dom$element('ul'))
 				]),
-			visotype$elm_dom$Dom$element('div')));
+			A2(
+				visotype$elm_dom$Dom$addClass,
+				'todo',
+				visotype$elm_dom$Dom$element('div'))));
 };
 var elm$core$Platform$Cmd$batch = _Platform_batch;
 var elm$core$Platform$Cmd$none = elm$core$Platform$Cmd$batch(_List_Nil);
